Fix devlog spacer in dark mode

--- a/src/app/views/discover/games/view/overview/_devlog/devlog.styl
+++ b/src/app/views/discover/games/view/overview/_devlog/devlog.styl
@@ -11,7 +11,11 @@
 	@media $media-xs
 		full-bleed()
 		theme-prop('background-color', 'bg-offset')
+		theme-prop('border-top-color', 'bg-subtle')
+		theme-prop('border-bottom-color', 'bg-subtle')
 		height: ($line-height-computed / 2)
-		border-top: 1px solid $gray-lighter
-		border-bottom: 1px solid $gray-lighter
+		border-top-width: 1px
+		border-top-style: solid
+		border-bottom-width: 1px
+		border-bottom-style: solid
 		margin-bottom: $line-height-computed
